force-app/main/default/objects/AC_Inventory__c/AC_Inventory__c.object-meta.xml
<CustomObject>
    <label>AC Inventory</label>
    <nameField>
        <displayFormat>IN-{000000}</displayFormat>
        <label>AC Inventory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>